# ImJustTrying.github.io

./: CNAME
astar/: astar.css  astar.js  index.html
calc/: calc.css  calc.js  calculate.php  index.html  tests.php
calculator/: README.md  calc.css  calc.js  index.html
image-processing/: index.html  style.css  wasm.js
image-processing/rust-wasm/: Cargo.toml
image-processing/rust-wasm/pkg/: rust_wasm.d.ts  rust_wasm.js  rust_wasm_bg.wasm  rust_wasm_bg.wasm.d.ts
image-processing/rust-wasm/src/: lib.rs
inverse/: index.html  inverse.css  inverse.js
pathfinding/: README.md  dom.js  dom.ts  graph.js  graph.ts  index.html  maze_search.ts  pathfinder.css  pathfinder.js  pathfinder.ts  todo.txt  ui.js  ui.ts
pathfinding/js/: dom.js  graph.js  maze_search.js  search.js  ui.js
pathfinding/ts/: dom.ts  graph.ts  maze_search.ts  search.ts  tsconfig.json  ui.ts
