[package]
name = "rust-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
image = "0.24"
console_error_panic_hook = "0.1.7"

[dependencies.web-sys]
version = "0.3.61"
features = [
    "console"
]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
